# flick

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: main.cpp
cmake/: Misc.cmake
include/: Media.h  SimpleInterface.h  Timeline.h  ai.h  api.h  edit.h  ffmpeg.h  flickConfig.h.in  suggestions.h  util.h
src/: Media.cpp  SimpleInterface.cpp  Timeline.cpp  ai.cpp  api.cpp  edit.cpp  suggestions.cpp  util.cpp
tests/: CMakeLists.txt  dummy.cpp
